--- a/drinks.html
+++ b/drinks.html
@@ -11,8 +11,7 @@
 </head>
 <body>
     <nav class="nav">
-        <span class="material-symbols-outlined">
-lunch_dining
+        <span class="material-symbols-outlined sizeandcolour"> lunch_dining </span>
 </span>
         <ul class="navigation">
             <li><a href="index.html">Kezdőlap</a></li>
@@ -158,7 +157,9 @@ lunch_dining
                 <h2>Nézz szét a galériánkban, ahol megtalálod a büszkeségeinket : <a href="gallery.html">Irány a Galéria!</a></h2>
         
         </main>
-        <footer></footer>
+        <footer>
+            <p>© 2025 Tasty Burger. Minden jog fenntartva.</p>
+        </footer>
     </div>
 
 </body>
