--- a/gallery.html
+++ b/gallery.html
@@ -16,8 +16,7 @@
 
 <body>
     <nav class="nav">
-        <span class="material-symbols-outlined">
-lunch_dining
+        <span class="material-symbols-outlined sizeandcolour"> lunch_dining </span>
 </span>
         <ul class="navigation">
             <li><a href="index.html">Kezdőlap</a></li>
@@ -33,7 +32,7 @@ lunch_dining
             <div></div>
         </div>
     </nav>
-    <div class="grid-container">
+    <div class="flex-container">
         <header>
             <h1>“This is a tasty burger.” – Jules Winnfield</h1>
         </header>
@@ -55,7 +54,7 @@ lunch_dining
                 <img id="fullImage">
             </div>
         </main>
-        <footer></footer>
+        <footer><p>© 2025 Tasty Burger. Minden jog fenntartva.</p></footer>
     </div>
     <script src="js/script.js"></script>
 </body>
