--- a/menu.html
+++ b/menu.html
@@ -15,8 +15,7 @@
 
 <body>
     <nav class="nav">
-        <span class="material-symbols-outlined">
-lunch_dining
+        <span class="material-symbols-outlined sizeandcolour"> lunch_dining </span>
 </span>
         <ul class="navigation">
             <li><a href="index.html">Kezdőlap</a></li>
@@ -33,7 +32,6 @@ lunch_dining
         </div>
         <script src="js/script.js"></script>
     </nav>
-    <div class="grid-container">
         
             
                 <header>
@@ -179,7 +177,7 @@ lunch_dining
                                     <li class="menu_li_flex">BBQ és chipotle szósz</li>
                                     <li class="menu_li_flex">Paradicsom</li>
                                     <li class="menu_li_flex">Briós buci</li>
-                                    <li class="menu_li_flex">Extra méretű krumpli és coleslaw</li>
+                                    <li class="menu_li_flex">Extra krumpli és coleslaw</li>
                                 </ul>
                         </div>
                         </div>
@@ -200,11 +198,12 @@ lunch_dining
                                 </ul>
                         </div>
                         </div>
-
-                </div>
+                    </div>
                 <h4>Minden burger mellé jár valami ütős: <a href="drinks.html">Válassz italt!</a></h4>   
         </main>
-        <footer></footer>
+        <footer>
+            <p>© 2025 Tasty Burger. Minden jog fenntartva.</p>
+        </footer>
     </div>
 
 </body>
