--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,7 @@
 
 <body>
     <nav class="nav">
-        <span class="material-symbols-outlined" >
-lunch_dining
+        <span class="material-symbols-outlined sizeandcolour"> lunch_dining </span>
 </span>
         <ul class="navigation">
             <li><a href="index.html">Kezdőlap</a></li>
@@ -34,7 +33,7 @@ lunch_dining
         </div>
         <script src="js/script.js"></script>
     </nav>
-    <div class="grid-container">
+    <div class="flex-container">
         <header>
             <h1>Mindenhol jó, de legjobb nálunk</h1>
         </header>
@@ -47,19 +46,40 @@ lunch_dining
             <div id="form">
             <form action="GET">
                 <label for="name">Kérlek add meg a neved:</label>
-                <input type="text" id="name" placeholder="Név" >
+                <input type="text" id="name" placeholder="Név" required>
 
                 <label for="mobil">Telefonszámod:</label>
-                <input type="number" id="mobil" placeholder="+36" >
+                <input type="number" id="mobil" required placeholder="+36" >
 
                 <label for="date">Foglalj Napot:</label>
-                <input type="date" id="date">
-
-                <label for="time">Foglalj Időpont:</label>
-                <input type="time" id="time" step="900" min="08:00" max="23:00">
+                <input type="date" id="date" required>
+ 
+                <label for="contact-time">Foglalj Időpontot:</label>
+                <select id="timeSelect" name="time" required>
+                    <option value="12:00">12:00</option>
+                    <option value="12:30">12:30</option>
+                    <option value="13:00">13:00</option>
+                    <option value="13:30">13:30</option>
+                    <option value="14:00">14:00</option>
+                    <option value="14:30">14:30</option>
+                    <option value="15:00">15:00</option>
+                    <option value="15:30">15:30</option>
+                    <option value="16:00">16:00</option>
+                    <option value="16:30">16:30</option>
+                    <option value="17:00">17:00</option>
+                    <option value="17:30">17:30</option>
+                    <option value="18:00">18:00</option>
+                    <option value="18:30">18:30</option>
+                    <option value="19:00">19:00</option>
+                    <option value="19:30">19:30</option>
+                    <option value="20:00">20:00</option>
+                    <option value="20:30">20:30</option>
+                    <option value="21:00">21:00</option>
+                    <option value="21:30">21:30</option>
+                </select>
 
                 <label for="asztalfoglalas">Hány főre szeretnél asztalt:</label>
-                <select name="name" id="asztalfoglalas">
+                <select name="name" id="asztalfoglalas" required>
                     <option value="one">1 Főre</option>
                     <option value="two">2 Főre</option>
                     <option value="three">3 Főre</option>
@@ -72,7 +92,7 @@ lunch_dining
 
 
                 <label for="e-mail">E-mail címed:</label>
-                <input type="email" id="e-mail">
+                <input type="email" id="e-mail" required>
 
                 <input type="submit" value="Foglalás">
             </form>
@@ -85,7 +105,8 @@ lunch_dining
             <div class="map">
                 <iframe id="google_map"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d168.4426089648123!2d19.025257885615!3d47.50779925794102!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4741dd540cd1a5cd%3A0xf785a414ee659e9d!2zS2lyw6FseSBLw7Z6cG9udA!5e0!3m2!1shu!2shu!4v1753013276941!5m2!1shu!2shu"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    width="600" height="450
+                    " style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="kapcsolat">
@@ -114,9 +135,8 @@ lunch_dining
             
         </main>
         <footer>
-            
+            <p>© 2025 Tasty Burger. Minden jog fenntartva.</p>
         </footer>
     </div>
-
 </body>
 </html>
