--- a/drinks.html
+++ b/drinks.html
@@ -26,7 +26,6 @@
             <div></div>
             <div></div>
         </div>
-        <script src="js/script.js"></script>
     </nav>
     <div class="grid-container">
         <header> 
@@ -78,7 +77,7 @@
                 </tr>
              </table>
                 <h2>Válassz kínálatunkból:</h2>
-                <div class="flex-container">
+                <div class="container">
                         <div class="flex-item">
                             <h3 class="flex_h3">Mia’s Favorite</h3>
                             <div class="box">
@@ -96,7 +95,7 @@
                         <div class="flex-item">
                             <h3 class="flex_h3">Vega’s Garden</h3>
                             <div class="box">
-                            <img class="img_flex" src="img/Vega’s Garden.jpg" alt="Vincent Shake">
+                            <img class="img_flex" src="img/Vega’s Garden1.jpg" alt="Vincent Shake">
                             <ul class="ul_flex">
                                 <li class="menu_li_flex">Hendrick’s gin</li>
                                 <li class="menu_li_flex">Bols Peach likőr</li>
@@ -109,7 +108,7 @@
                         <div class="flex-item">
                             <h3 class="flex_h3">The Bonnie Situation</h3>
                             <div class="box">
-                            <img class="img_flex" src="img/The Bonnie Situation.jpg" alt="The Bonnie Situation">
+                            <img class="img_flex" src="img/The Bonnie Situation_1.jpg" alt="The Bonnie Situation">
                             <ul class="ul_flex">
                                 <li class="menu_li_flex">Mezcal</li>
                                 <li class="menu_li_flex">Cointreau</li>
@@ -120,7 +119,7 @@
                         <div class="flex-item">
                             <h3 class="flex_h3">Big Kahuna Break</h3>
                             <div class="box">
-                            <img class="img_flex" src="img/Big Kahuna Break.jpg" alt="Big Kahuna Shake">
+                            <img class="img_flex" src="img/Big Kahuna Break1.jpg" alt="Big Kahuna Shake">
                             <ul class="ul_flex">
                                 <li class="menu_li_flex">Monkey Shoulder whiskey</li>
                                 <li class="menu_li_flex">Pandan szirup</li>
@@ -133,7 +132,7 @@
                         <div class="flex-item">
                             <h3 class="flex_h3">Jack Rabbit Martini</h3>
                             <div class="box">
-                            <img class="img_flex" src="img/Jack Rabbit Martini.jpg" alt="Jack Rabbit Martini">
+                            <img class="img_flex" src="img/Jack Rabbit Martini1.jpg" alt="Jack Rabbit Martini">
                             <ul class="ul_flex">
                                 <li class="menu_li_flex">Bols Marine vodka</li>
                                 <li class="menu_li_flex">Licsi likőr</li>
@@ -145,7 +144,7 @@
                         <div class="flex-item">
                             <h3 class="flex_h3">The Wolf</h3>
                             <div class="box">
-                            <img class="img_flex" src="img/The Wolf.jpg" alt="The Wolf">
+                            <img class="img_flex" src="img/The Wolf1.jpg" alt="The Wolf">
                             <ul class="ul_flex">
                                 <li class="menu_li_flex">Hendrick’s Grand Cabaret</li>
                                 <li class="menu_li_flex">Campari</li>
@@ -161,7 +160,7 @@
             <p>© 2025 Tasty Burger. Minden jog fenntartva.</p>
         </footer>
     </div>
-
+    <script src="js/script.js"></script>
 </body>
 
 </html>
