--- a/gallery.html
+++ b/gallery.html
@@ -32,12 +32,11 @@
             <div></div>
         </div>
     </nav>
-    <div class="flex-container">
         <header>
             <h1>“This is a tasty burger.” – Jules Winnfield</h1>
         </header>
         <main>
-            <div class="gallery_grid">
+            <div class="gallery_flex">
             <img src="img/img_gallery.jpg" alt="Kicsi kép 1" class="image">
             <img src="img/img_gallery2.jpg" alt="Kicsi kép 1" class="image">
             <img src="img/img_gallery3.jpg" alt="Kicsi kép 1" class="image">
