--- a/index.html
+++ b/index.html
@@ -1,20 +1,10 @@
 <!DOCTYPE html>
 <html lang="hu">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
-      rel="stylesheet"
-    />
+    <link  href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet"  />
+    <link  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"  rel="stylesheet"  />
     <title>Tasty Burger</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -36,23 +26,16 @@
         <div></div>
         <div></div>
       </div>
-      <script src="js/script.js"></script>
     </nav>
-    <div class="grid-container">
-     
       <header>
         <h1>“This is a tasty burger.” – Jules Winnfield</h1>
       </header>
+      <div class="flex-container">
       <main>
-        
-        <div>
           <h2>Üdv a Tasty Burger-ben!</h2>
-          <p id="bevezeto1">
-            <img
-              id="intro_bal_img"
-              src="img/tasty_burger.jpg"
-              alt="tasty burger"
-            />
+        <div class="items">
+          <img class="burgerek_img" src="img/tasty_burger.jpg" alt="tasty burger"/>
+          <p class="flex_text">  
             Nálunk a hamburgerek nem csak kaják – karakterek. Ez nem egy
             szokványos gyorsétterem. Ez egy neo-noir burger-univerzum, egy
             szelet mozi, egy harapásnyi Tarantino. Itt minden falat egy idézet,
@@ -61,23 +44,20 @@
             “$5 Milkshake”-ben a stílus, a “Briefcase Surprise”-ban pedig…
             valami, ami ragyog.
           </p>
-
-          <p id="bevezeto2">
-            <img id="intro_jobb_img" src="img/shake.jpg" alt="shake" />Az
-            enteriőr? VHS retró, neonfény és vérbeli noir hangulat. A zene? Pont
+        </div>
+        <div class="items">
+          <p class="flex_text">
+            Az enteriőr? VHS retró, neonfény és vérbeli noir hangulat. A zene? Pont
             az, amitől Mia Wallace elkezdene táncolni. A kiszolgálás? Gyors,
             határozott, mint Mr. Wolf. Nem érdekel a sablonburger? Jó. Minket
             se. A Tasty Burger azoknak szól, akik szeretik az erős ízeket, az
             ikonikus pillanatokat, és nem félnek idézőjelesen enni.
           </p>
-
-          <h2 class="cim_h2">Tasty Burger – a sztorink</h2>
-          <p class="left_text">
-            <img
-              class="burgerek_img_float_left"
-              src="img/burger1.jpg"
-              alt="hamburger"
-            />
+          <img class="burgerek_img" src="img/shake.jpg" alt="shake" />
+          </div>
+          <h2>Tasty Burger – a sztorink</h2>
+          <div class="items">
+          <p class="flex_text">
             Nem egy újabb burgeres vagyunk. Egy jelenet vagyunk a kedvenc
             filmedből. A Tasty Burger nem csak egy hely, ahol hamburgert kapsz.
             Ez egy életérzés, egy mozi-univerzum, ahol a grillsütő mögött
@@ -88,13 +68,11 @@
             megszületett a Tasty Burger – egy olyan hely, ahol a burger annyira
             jó, hogy idézőjelbe tennéd.
           </p>
+          <img  class="burgerek_img"  src="img/burger1.1.jpg" alt="hamburger"/>
+          </div>
           <h2 class="cim_h2">mi vezérel minket?</h2>
-          <p class="right_text">
-            <img
-              class="burgerek_img_float_right"
-              src="img/burger2.jpg"
-              alt="hamburger"
-            />
+          <div class="items">
+          <p class="flex_text">
             Minőség, karakterrel: Nálunk nincsen sablon. Minden burger, shake és
             desszert egyedi recept, pont úgy, ahogy egy Tarantino karakter is
             sosem sablonos. Filmrajongóknak, kajamániásoknak: Ha egyszer ettél
@@ -102,41 +80,42 @@
             és szemtelenség: Mert a világ tele van unalmas gyorsételekkel. Mi
             nem kérünk belőle. És te sem fogsz elégedetlenül távozni.
           </p>
+          <img class="burgerek_img" src="img/burger2.jpg"  alt="hamburger" />
+          </div>
           <h2 class="cim_h2">egy kis kontextus…</h2>
-          <p class="left_text">
-            <img
-              class="burgerek_img_float_left"
-              src="img/burger3.jpg"
-              alt="hamburger"
-            />
+          <div class="items">
+          <p class="flex_text">
             Hogy miért a ponyvaregény? mert az a film, ahol egy burger
             filmtörténelmi jelentőségű lett. és mi szeretnénk, ha nálunk minden
             burger legalább olyan emlékezetes lenne, mint jules monológja.
           </p>
+          <img class="burgerek_img" src="img/burger3.jpg" alt="hamburger" />
+          </div>
           <h2 class="cim_h2">rólad is szól</h2>
-          <p class="right_text">
-            <img
-              class="burgerek_img_float_right"
-              src="img/burger4.jpg"
-              alt="hamburger"
-            />
+          <div class="items">
+          <p class="flex_text">
             a Tasty Burger nem csak rólunk szól. ez rólad is szól, ha: szereted
             az egyedi helyeket, kajában is keresed a sztorit, tudod, mi az a
             „royale with cheese”, vagy csak egyszerűen… szeretsz jókat enni,
             stílusosan.
           </p>
+          <img class="burgerek_img" src="img/burger4.jpg" alt="hamburger" />
+          </div>
           <h2 class="cim_h2">ugorj be hozzánk!</h2>
+          <div class="items">
           <p>
             Tudni akarod, mitől tasty egy burger? A Jules-féle harag, a Mia-féle
             milkshake és a megannyi Ponyvaregény szereplők által alkotta ízletes
             burgereink? Akkor ezernyi kaland vár.
             <a href="menu.html">Irány a menü!</a>
           </p>
+          </div>
         </div>
       </main>
       <footer>
         <p>© 2025 Tasty Burger. Minden jog fenntartva.</p>
       </footer>
     </div>
+    <script src="js/script.js"></script>
   </body>
 </html>
