--- a/drinks.html
+++ b/drinks.html
@@ -12,7 +12,6 @@
 <body>
     <nav class="nav">
         <span class="material-symbols-outlined sizeandcolour"> lunch_dining </span>
-</span>
         <ul class="navigation">
             <li><a href="index.html">Kezdőlap</a></li>
             <li><a href="menu.html">Étlap</a></li>
@@ -27,17 +26,14 @@
             <div></div>
         </div>
     </nav>
-    <div class="grid-container">
         <header> 
             <h1><img class="icon" src="img/film-movie-icon.png" alt="movie.icon"> „A második felvonás” <img class="icon" src="img/movie-svgrepo-com.png" alt="rolling_1"></h1>
         </header>
          <main>     
                 <h2>Üdv a Tasty Burger!</h2>
-                <p>Éttermünket olyan helynek szánjuk, ahova mi magunk
+                <p class="intro_text">Éttermünket olyan helynek szánjuk, ahova mi magunk
                     is szívesen beülnénk, ahol mindenki úgy érezheti magát, mintha otthon
-                    bulizna a barátaival.
-
-                    Mi gondoskodunk a hozzávalókról, ti csak
+                    bulizna a barátaival. Mi gondoskodunk a hozzávalókról, ti csak
                     dőljetek hátra, és élvezzétek a kikapcsolódást!</p>
              <table id="menu">
                 <tr class="menu1">
@@ -48,32 +44,32 @@
                 <tr class="menu2"> 
                     <td>Mia’s Favorite</td>
                     <td>Absolut Vanilia vodka, Passoa, passion fruit püré, fehércsoki szirup, lime, prosecco – Mia Wallace is ez inná</td>
-                    <td class="td3">3000 Ft</td>
+                    <td class="td3">3.000 Ft</td>
                 </tr>
                 <tr class="menu2">
                     <td>Vega’s Garden</td>
                     <td>Hendrick’s gin, Bols Peach likőr, grapefruit tonic, lime, bazsalikom hab</td>
-                    <td class="td3">3500 Ft</td>
+                    <td class="td3">3.500 Ft</td>
                 </tr>
                 <tr class="menu2">
                     <td>The Bonnie Situation</td>
                     <td>Mezcal, Cointreau, lime</td>
-                    <td class="td3">3500 Ft</td>
+                    <td class="td3">3.500 Ft</td>
                 </tr>
                 <tr class="menu2">
                     <td>Big Kahuna Break</td>
                     <td>Monkey Shoulder whiskey, pandan szirup, kókusz szirup, ananászlé, lime</td>
-                    <td class="td3">4000 Ft</td>
+                    <td class="td3">4.000 Ft</td>
                 </tr>
                 <tr class="menu2">
                     <td>Jack Rabbit Martini</td>
                     <td>Bols Marine vodka, licsi likőr, levendula szirup, prosecco</td>
-                    <td class="td3">4500 Ft</td>
+                    <td class="td3">4.500 Ft</td>
                 </tr>
                  <tr class="menu2">
                     <td>The Wolf</td>
                     <td>Hendrick’s Grand Cabaret, Campari, vermut</td>
-                    <td class="td3">4800 Ft</td>
+                    <td class="td3">4.800 Ft</td>
                 </tr>
              </table>
                 <h2>Válassz kínálatunkból:</h2>
@@ -90,7 +86,9 @@
                                     <li class="menu_li_flex">Lime</li>
                                     <li class="menu_li_flex">Prosecco</li>
                                 </ul>
+                                <div class="price_list"><p>3.000 Ft</p></div>
                         </div>
+
                         </div>
                         <div class="flex-item">
                             <h3 class="flex_h3">Vega’s Garden</h3>
@@ -103,6 +101,7 @@
                                 <li class="menu_li_flex">Lime</li>
                                 <li class="menu_li_flex">Bazsalikom hab</li>
                             </ul>
+                             <div class="price_list"><p>3.500 Ft</p></div>
                         </div>
                         </div>
                         <div class="flex-item">
@@ -114,6 +113,7 @@
                                 <li class="menu_li_flex">Cointreau</li>
                                 <li class="menu_li_flex">Lime</li>
                             </ul>
+                             <div class="price_list"><p>3.500 Ft</p></div>
                         </div>
                         </div>
                         <div class="flex-item">
@@ -127,6 +127,7 @@
                                 <li class="menu_li_flex">Ananászlé</li>
                                 <li class="menu_li_flex">Lime</li>
                             </ul>
+                             <div class="price_list"><p>4.000 Ft</p></div>
                         </div>
                         </div>
                         <div class="flex-item">
@@ -139,6 +140,7 @@
                                 <li class="menu_li_flex">Levendula szirup</li>
                                 <li class="menu_li_flex">Prosecco</li>
                             </ul>
+                             <div class="price_list"><p>4.500 Ft</p></div>
                         </div>
                         </div>
                         <div class="flex-item">
@@ -150,10 +152,11 @@
                                 <li class="menu_li_flex">Campari</li>
                                 <li class="menu_li_flex">Vermut</li>
                             </ul>
+                             <div class="price_list"><p>4.800 Ft</p></div>
                         </div>
                         </div>
                 </div>
-                <h2>Nézz szét a galériánkban, ahol megtalálod a büszkeségeinket : <a href="gallery.html">Irány a Galéria!</a></h2>
+                <h2>Nézz szét a galériánkban, ahol megtalálod a büszkeségeinket: <a href="gallery.html">Irány a Galéria!</a></h2>
         
         </main>
         <footer>
