--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             megszületett a Tasty Burger – egy olyan hely, ahol a burger annyira
             jó, hogy idézőjelbe tennéd.
           </p>
-          <img  class="burgerek_img"  src="img/burger1.1.jpg" alt="hamburger"/>
+          <img  class="burgerek_img"  src="img/hogy_mi1.jpg" alt="Brett"/>
           </div>
           <h2 class="cim_h2">mi vezérel minket?</h2>
           <div class="items">
@@ -103,13 +103,13 @@
           </div>
           <h2 class="cim_h2">ugorj be hozzánk!</h2>
           <div class="items">
-          <p>
+          <p class="flex_text">
             Tudni akarod, mitől tasty egy burger? A Jules-féle harag, a Mia-féle
-            milkshake és a megannyi Ponyvaregény szereplők által alkotta ízletes
-            burgereink? Akkor ezernyi kaland vár.
-            <a href="menu.html">Irány a menü!</a>
-          </p>
+            milkshake és a megannyi Ponyvaregény szereplők által ihlette ízletes
+            burgereink?</p>
           </div>
+          <h2>Akkor ezernyi kaland vár: <a href="menu.html">Irány a menü!</a>
+          </h2>
         </div>
       </main>
       <footer>
