--- a/menu.html
+++ b/menu.html
@@ -27,19 +27,18 @@
         </div>
     </nav>
         
-    <div class="grid-container">        
+    <div class="container_header">        
                 <header>
                 <h1 id="menu_main_title"><img src="img/Mia.jpg" alt="Mia" class="dancing_img1"> 
-                    Menükínálatunk kedvenc Tarantino karaktereink alapján
+                    Menükínálatunk kedvenc karaktereink alapján
                     <img src="img/Vincent.jpg" alt="Vincent" class="dancing_img2"></h1>
                 </header>
+    </div>            
         <main>        
                 <h2>Üdv a Tasty Burger-ben!</h2>
-                <p>Éttermünket olyan helynek szánjuk, ahova mi magunk
+                <p class="intro_text">Éttermünket olyan helynek szánjuk, ahova mi magunk
                     is szívesen beülnénk, ahol mindenki úgy érezheti magát, mintha otthon
-                    bulizna a barátaival.
-
-                    Mi gondoskodunk a hozzávalókról, ti csak
+                    bulizna a barátaival. Mi gondoskodunk a hozzávalókról, ti csak
                     dőljetek hátra, és élvezzétek a kikapcsolódást!</p>
                 <table id="menu">
                     <tr class="menu1">
@@ -50,22 +49,22 @@
                     <tr class="menu2">
                         <td>Jules’ Fury</td>
                         <td>Dupla marhahús, jalapeño, chiliszósz – "righteous anger in every bite"</td>
-                        <td class="td3">4200 Ft</td>
+                        <td class="td3">4.200 Ft</td>
                     </tr>
                     <tr class="menu2">
                         <td>Mia’s Classic</td>
                         <td>Retro stílusú cheeseburger, extra shake</td>
-                        <td class="td3">4600 Ft</td>
+                        <td class="td3">4.500 Ft</td>
                     </tr>
                     <tr class="menu2">
                         <td>Vincent Veggie</td>
                         <td>Vegaburger stílusosan</td>
-                        <td class="td3">4000 Ft</td>
+                        <td class="td3">4.000 Ft</td>
                     </tr>
                     <tr class="menu2">
                         <td>Big Kahuna 2.0</td>
                         <td>A Pulp Fiction utalás modernizálva</td>
-                        <td class="td3">4500 Ft</td>
+                        <td class="td3">4.500 Ft</td>
                     </tr>
                     <tr class="menu2">
                         <td>Marcellus Meal</td>
@@ -96,6 +95,7 @@
                                     <li class="menu_li_flex">Jégsaláta</li>
                                     <li class="menu_li_flex">Pirított briós buciban</li>
                                 </ul>
+                                <div class="price_list"><p>4.200 Ft</p></div>
                         </div>
                         </div>
                         <div class="flex-item"> 
@@ -114,6 +114,7 @@
                                     <li class="menu_li_flex">Vöröshagyma karikák</li>
                                     <li class="menu_li_flex">Puha szezámos buci</li>
                                 </ul>
+                                <div class="price_list"><p>4.500 Ft</p></div>
                         </div>
                         </div>
                         <div class="flex-item"> 
@@ -131,6 +132,7 @@
                                     <li class="menu_li_flex">Paradicsom</li>
                                     <li class="menu_li_flex">Teljes kiörlésű zsemle</li>
                                 </ul>
+                                <div class="price_list"><p>4.000 Ft</p></div>
                         </div>
                         </div>
                         <div class="flex-item"> 
@@ -148,6 +150,7 @@
                                     <li class="menu_li_flex">Lila hagyma</li>
                                     <li class="menu_li_flex">Édes pirított zsemle </li>
                                 </ul>
+                                <div class="price_list"><p>4.500 Ft</p></div>
                         </div>
                         </div>
                         <div class="flex-item"> 
@@ -166,6 +169,7 @@
                                     <li class="menu_li_flex">Briós buci</li>
                                     <li class="menu_li_flex">Extra krumpli és coleslaw</li>
                                 </ul>
+                                <div class="price_list"><p>12.500 Ft</p></div>
                         </div>
                         </div>
                         <div class="flex-item"> 
@@ -183,15 +187,15 @@
                                     <li class="menu_li_flex">Sült krumpli</li>
                                     <li class="menu_li_flex">Üdítő a menühöz</li>
                                 </ul>
+                                <div class="price_list"><p>14.500 Ft</p></div>
                         </div>
                         </div>
                     </div>
-                <h4>Minden burger mellé jár valami ütős: <a href="drinks.html">Válassz italt!</a></h4>   
+                <h2>Minden burger mellé jár valami ütős: <a href="drinks.html">Válassz italt!</a></h2>   
         </main>
         <footer>
             <p>© 2025 Tasty Burger. Minden jog fenntartva.</p>
         </footer>
-    </div>
     <script src="js/script.js"></script>
 </body>
 
